# CProto

./: .gitignore  CHANGELOG.md  Counterpoint.cabal  LICENSE  README.md
doc/farm22/: abstract.bib  abstract.tex  comment.cut  farm-abstract.bbl  farm-abstract.blg  farm-abstract.out
doc/farm22/.mscbackup/: .Beethoven_146.mscz,  .Beethoven_146_2.mscz,  .Beethoven_146_2c.mscz,
newdist/dante/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Beethoven.hs  Boundary.hs  Class.hs  Constraint.hs  Counterpoint.hs  Frog.hs  Interval.hs  Main.hs  Midi.hs  Motion.hs  Music.hs  Pitch.hs  Types.hs  Yamanote.hs
