cabal-version:      2.4
name:               Counterpoint
synopsis:           counterpoint
description:        counterpoint
version:            0.1.0.0
homepage:           https://github.com/halfaya/Counterpoint
license:            MIT
license-file:       LICENSE
author:             John Leo
maintainer:         leo@halfaya.org
copyright:          2022 John Leo
extra-source-files: CHANGELOG.md README.md

executable Counterpoint
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base ^>=4.15.0.0, sbv, containers, HCodecs, directory
  other-modules:    Pitch, Interval, Counterpoint, Yamanote, Frog, Midi
  default-language: Haskell2010
